<resources>
    <string name="appName">home2</string>
    <string name="introTitle1">@string/appName</string>
    <string name="introDesc1">To start swipe to left</string>
    <string name="introTitle2">Fast</string>
    <string name="introDesc2">Developed without third-party heavy components</string>
    <string name="introTitle3">Optimized</string>
    <string name="introDesc3">Say \"No\" to slow accessing and battery leaking</string>
    <string name="introTitle4">Global access</string>
    <string name="introDesc4">Manage your home from any place over Internet</string>
    <string name="introTitle5">Secure</string>
    <string name="introDesc5">Strong cryptographic algorithms keep your data in safe</string>
    <string name="introTitle6">Open source platform</string>
    <string name="introDesc6">Source code is available on GitHub\nYou can make the app better!</string>
    <string name="introTitle7">Get started</string>
    <string name="notAuthenticated">You are not authenticated</string>
    <string name="usernameError">USERNAME ERROR</string>
    <string name="usernameDefault">Default username</string>
    <string name="dashboard">Dashboard</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="scenarios">Scenarios</string>
    <string name="modules">Modules</string>
    <string name="sync">Sync</string>
    <string name="about">About</string>
    <string name="menu">Menu</string>
    <string name="authTitle">Authentication</string>
    <string name="authSubtitle">Knock-knock, who is here?</string>
    <string name="authLogin">Login</string>
    <string name="authPassword">Password</string>
    <string name="authEnter">Enter</string>
    <string name="authEnterByEmail">Enter by email</string>
    <string name="authRequestingPubKey">Requesting public key&#8230;</string>
    <string name="authInvalidPubKey">Invalid public key, aborted</string>
    <string name="authSendingCredentials">Sending credentials&#8230;</string>
    <string name="authInvalidCredentials">Invalid login or password</string>
    <string name="authRequestingCode">Requesting code&#8230;</string>
    <string name="authSendingCode">Sending code&#8230;</string>
    <string name="authNoEmailMatches">User with this email doesn\'t exist</string>
    <string name="authRequestingCodeTimeout">Please, wait until timeout ends</string>
    <string name="authNoMoreRequests">You have reached the limit of requests</string>
    <string name="authNoMoreRequests2">Enter by password to reset the counter</string>
    <string name="altAuthDisabled">Authentication via one-time code disabled</string>
    <string name="authCodeSent">Code sent</string>
    <string name="authCodeIncorrect">Incorrect code</string>
    <string name="accountTitle">Account</string>
    <string name="accountUsername">Edit account name</string>
    <string name="accountPrivacy">Privacy</string>
    <string name="accountLogout">Logout</string>
    <string name="accountLogoutMessage">Private data will be deleted from the app</string>
    <string name="accountUsernameTitle">Account name</string>
    <string name="accountUsernameHint">Type your name</string>
    <string name="accountEncryption">Encryption</string>
    <string name="accountEncryptionAESLength">Current AES key length:</string>
    <string name="accountEncryptionAESGen">Generate new AES key</string>
    <string name="keyChanging">Changing AES key&#8230;</string>
    <string name="accountEncryptionAESKeyLength">AES key length</string>
    <string name="accountEncryptionAESKeyDesc">Simple rule: longer - more safety. 256 bits is used to work with classified documents</string>
    <string name="accountEncryptionAES16">128 bits</string>
    <string name="accountEncryptionAES32">256 bits</string>
    <string name="accountCredentials">Credentials management</string>
    <string name="accountPassword">Change password</string>
    <string name="accountLogin">Change login</string>
    <string name="altAuth">Alternative authentication</string>
    <string name="altAuthEnabled">Allow entering by one-time code</string>
    <string name="altAuthEmail">Change email</string>
    <string name="closeSessions">Close all sessions</string>
    <string name="closingSessions">Terminating sessions&#8230;</string>
    <string name="closeSessionsMessage">Other devices associated with this user will be deauthenticated</string>
    <string name="closeSessionsContinue">Continue</string>
    <string name="credentialsEditor">Credentials editor</string>
    <string name="accountPasswordCheck">Current password</string>
    <string name="accountPasswordNew">New password</string>
    <string name="accountLoginNew">New login</string>
    <string name="accountEmailNew">New email</string>
    <string name="credentialsPasswordDesc">It needs your current password to check if it\'s not the real you. Strong password must be at least 8 characters long, include numbers and special characters such as \'#\', etc</string>
    <string name="credentialsLoginDesc">It needs your current password to check if it\'s not the real you. Login should be a simple string containing only Latin alphabet and numbers</string>
    <string name="credentialsPasswordCheckFailed">Please, check your current password</string>
    <string name="credentialsLoginIsTaken">Login is already taken</string>
    <string name="credentialsEmailDesc">Email is used to enter into account via one-time code. So, you don\'t need to remember your login and password</string>
    <string name="credentialsEmailIsTaken">Email is already taken</string>
    <string name="emailDesc">You will receive a one-time code via email. It must be entered in a special field in the next step within 15 minutes</string>
    <string name="email">Enter your email</string>
    <string name="emailReceiveACode">Receive a code</string>
    <string name="emailCode">Enter a one-time code</string>
    <string name="emailCodeResend">Resend a code</string>
    <string name="createWidget">Create a new widget</string>
    <string name="moveWidgets">Move elements</string>
    <string name="removeWidgets">Remove all widgets</string>
    <string name="createWidgetType">Choose type:</string>
    <string name="createWidgetRadioTitle">Title</string>
    <string name="createWidgetRadioModule">Module</string>
    <string name="createTitleTitle">Type title:</string>
    <string name="createTitleExample">My great title</string>
    <string name="createModuleTitle">Choose a module:</string>
    <string name="createModuleList">Open modules list</string>
    <string name="widgetsTitle">Widgets</string>
    <string name="widgetsSubtitle">You can see changes in live mode\nIt won\'t be saved automatically</string>
    <string name="widgetRemoveTitle">Remove widget</string>
    <string name="widgetRemoveMessages">You can reverse this operation later</string>
    <string name="widgetsRemoveTitle">@string/removeWidgets</string>
    <string name="widgetsRemoveMessages">State will be saved immediately</string>
    <string name="savedMode">All changes saved</string>
    <string name="unsavedMode">Unsaved changes detected</string>
    <string name="notificationsDesc">The application uses an internal notification system. However, it will be changed in the future</string>
    <string name="notificationsSystem">Global settings</string>
    <string name="notificationsEnabled">Notifications enabled</string>
    <string name="notificationsSuppress">Suppressed notifications</string>
    <string name="notificationsSuppressDesc">Select unimportant notification types to suppress them</string>
    <string name="suppressModulesStateSync">Modules state syncing</string>
    <string name="suppressModulesStateSyncFailed">Modules state sync failed</string>
    <string name="suppressUserDataSync">User data syncing</string>
    <string name="suppressUserDataSyncFailed">User data sync failed</string>
    <string name="scenariosDefaultTitle">New scenario</string>
    <string name="scenariosLoading">Loading scenarios&#8230;</string>
    <string name="scenariosCreate">Create scenario</string>
    <string name="scenariosUnsavedTitle">@string/unsavedMode</string>
    <string name="scenariosUnsavedMessage">Current state won\'t be saved</string>
    <string name="scenariosDeleteTitle">Delete scenario</string>
    <string name="scenariosDeleteMessage">It\'s irreversible operation, are you sure?</string>
    <string name="scenarioRenameTitle">Scenario title</string>
    <string name="scenarioUnknownModuleError">Non-existent module detected, aborted</string>
    <string name="scenarioLocking">Trying to get the lock&#8230;</string>
    <string name="scenarioSaving">Saving the scenario&#8230;</string>
    <string name="once">Once</string>
    <string name="everyday">Everyday</string>
    <string name="mon2fri">Mon to Fri</string>
    <string name="custom">Custom</string>
    <string name="status2">Status</string>
    <string name="enabled2">Enabled</string>
    <string name="options">Options</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="executing">Executing&#8230;</string>
    <string name="deleting">Deleting&#8230;</string>
    <string name="verifying">Verifying&#8230;</string>
    <string name="scenarioOpsEditor">Options editor</string>
    <string name="scenariosOpCreatorTitle">Choose an option</string>
    <string name="scenarioOpGetterTitle">Details</string>
    <string name="scenarioOpSetterTitle">Set a value</string>
    <string name="scenarioOpSetterKey">Key:</string>
    <string name="scenarioOpSetterType">Type:</string>
    <string name="scenarioOpSetterValue">Value:</string>
    <string name="scenarioOpsEditorDeleteTitle">Delete option</string>
    <string name="scenarioOpsEditorDeleteMessage">Are you sure?</string>
    <string name="scenarioOpsEditorReloadTitle">Reload editor</string>
    <string name="scenarioOpsEditorReloadMessage">All unsaved changes will be erased</string>
    <string name="reload">Reload</string>
    <string name="ok">OK</string>
    <string name="opsInfo">\n<b>Explorer mode:</b>\nSwipe left to view details\n\n<b>Editor mode:</b>\nSwipe left to edit\nSwipe right to delete</string>
    <string name="moduleEditTitle">Edit title</string>
    <string name="moduleConfigure">Configure</string>
    <string name="moduleSync">Sync state</string>
    <string name="moduleTitle">Module title</string>
    <string name="moduleHint">Type a new title</string>
    <string name="modulesConfigDialogTitle">Delete module</string>
    <string name="modulesConfigDialogMessage">Dependencies will be removed</string>
    <string name="modulesDiscovery">Modules discovery</string>
    <string name="modulesOverride">Override identical serials</string>
    <string name="modulesMerge">Add modules to app</string>
    <string name="modulesAddModuleTitle">Add module</string>
    <string name="modulesAddModuleMessage">It will be stored in the app</string>
    <string name="modulesAddModuleOverrideTitle">Override module</string>
    <string name="modulesAddModuleOverrideMessage">It will rewrite all related data</string>
    <string name="modulesMergeTitle">Add all modules</string>
    <string name="modulesMergeMessage">Your modules list will be merged by this</string>
    <string name="modulesDeleteAllTitle">Delete selected modules</string>
    <string name="authKey">Server auth key</string>
    <string name="authKeyDesc">The key is required for security purposes when obtaining a public key. It must be the same as the other on the server</string>
    <string name="enterAuthKey">Enter the key</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="notAvailableShort">N/A</string>
    <string name="defaultTitleTemperature">Temperature</string>
    <string name="modulesTypeTemperature">Temperature sensor</string>
</resources>