<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/menuAccount"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:drawableStart="@drawable/account"
            android:drawableTint="#00695C"
            android:fontFamily="sans-serif-medium"
            android:text="@string/usernameError"
            android:textAllCaps="true"
            android:textColor="#00796B" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/menuDashboard"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/dashboard"
            android:drawableTint="#444"
            android:text="@string/dashboard" />

        <Button
            android:id="@+id/menuMessages"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/people"
            android:drawableTint="#444"
            android:text="@string/messages" />

        <Button
            android:id="@+id/menuNotifications"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/notifications_none"
            android:drawableTint="#444"
            android:text="@string/notifications" />

        <Button
            android:id="@+id/menuModules"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/module"
            android:drawableTint="#444"
            android:text="@string/modules" />

        <Button
            android:id="@+id/menuSync"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/sync"
            android:drawableTint="#444"
            android:text="@string/sync" />

        <Button
            android:id="@+id/menuAbout"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/about"
            android:drawableTint="#444"
            android:text="@string/about" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>