<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView24"
        style="@style/StyledTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:textColor="#00796B" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/dashboardSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/done"
        android:drawablePadding="24dp"
        android:drawableTint="#999"
        android:lineSpacingExtra="8sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/savedMode"
        android:textColor="#999"
        android:visibility="visible" />

    <TextView
        android:id="@+id/dashboardUnsaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/error_outline"
        android:drawablePadding="24dp"
        android:drawableTint="#999"
        android:lineSpacingExtra="8sp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/unsavedMode"
        android:textColor="#999"
        android:visibility="visible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <Button
        android:id="@+id/dashboardCreateWidget"
        style="@style/StyledButtonIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add"
        android:text="@string/createWidget" />

    <Button
        android:id="@+id/dashboardMoveWidgets"
        style="@style/StyledButtonIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/list"
        android:text="@string/moveWidgets" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <Button
        android:id="@+id/dashboardRemoveWidgets"
        style="@style/StyledButtonIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/delete"
        android:drawableTint="#C51162"
        android:text="@string/removeWidgets"
        android:textColor="#C51162" />

</LinearLayout>