<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView38"
            style="@style/StyledTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountPrivacy"
            android:textColor="#00796B" />

        <TextView
            android:id="@+id/textView39"
            style="@style/StyledSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountEncryption"
            android:visibility="gone" />

        <Button
            android:id="@+id/accountGenAES"
            style="@style/StyledButtonIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/vpn_key"
            android:drawableTint="#666"
            android:text="@string/accountEncryptionAESGen"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView56"
            style="@style/StyledSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/accountEncryptionAESKeyLength" />

        <TextView
            android:id="@+id/textView59"
            style="@style/StyledDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountEncryptionAESKeyLengthDesc" />

        <RadioGroup
            android:id="@+id/accountKeyLength"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <RadioButton
                android:id="@+id/accountKey128"
                style="@style/StyledRadio"
                android:layout_width="match_parent"
                android:text="@string/accountEncryptionAES16" />

            <RadioButton
                android:id="@+id/accountKey256"
                style="@style/StyledRadio"
                android:layout_width="match_parent"
                android:text="@string/accountEncryptionAES32" />
        </RadioGroup>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/textView57"
            style="@style/StyledSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountPassword" />

        <TextView
            android:id="@+id/textView58"
            style="@style/StyledDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accountPasswordEmulate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <EditText
                android:id="@+id/accountPasswordOld"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/accountPasswordOld"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/accountPasswordNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:ems="10"
                android:hint="@string/accountPasswordNew"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" />

            <Button
                android:id="@+id/accountPasswordChange"
                style="@style/StyledButtonIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/done"
                android:drawableTint="@color/colorPrimary"
                android:text="@string/apply"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

    </LinearLayout>
</ScrollView>