<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/StyledTransparentButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/widgetTitle"
        style="@style/WidgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultTitleTemperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/widgetSubtitle"
        style="@style/WidgetSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modulesTypeTemperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/widgetTitle"
        app:layout_constraintTop_toBottomOf="@+id/widgetTitle" />

    <TextView
        android:id="@+id/widgetValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/stdPadding"
        android:text="@string/notAvailableShort"
        android:textSize="@dimen/inter16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/widgetTitle" />
</android.support.constraint.ConstraintLayout>